<?xml version="1.0"?>
<package>
  <name>robot_waist_pose_publisher</name>
  <version>0.1.0</version>
  <description>Publish the waist pose of a robot to tf</description>

  <maintainer email="bcoudrin@laas.fr">Benjamin Coudrin</maintainer>
  <license>TODO</license>
  <author email="bcoudrin@laas.fr">Benjamin Coudrin</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
